--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
       "path": "node_modules/cz-conventional-changelog"
     },
     "ghooks": {
-      "pre-commit": "npm run test && npm run coverage:check"
+      "pre-commit": "npm run coverage:check"
     }
   },
   "repository": {
