--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ after_success:
   - npm run coverage:report
   - npm run semantic-release
 branches:
-  except:
-    - /^v\d+\.\d+\.\d+$/
+  only:
+    - master
