--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ node_js:
 before_script:
   - npm prune
 script:
+  - npm run lint
   - npm run test:coverage
   - npm run coverage:check
 after_success:
