--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "semantic-release": "^7.0.2",
     "ts-jest": "^20.0.6",
-    "ts-node": "^3.0.6",
+    "ts-node": "3.3.0",
     "tsc-watch": "^1.0.5",
     "tslint": "^5.4.3",
     "tslint-config-prettier": "^1.1.0",
